# ffwf

./: .gitattributes  .gitignore  Cargo.toml  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
data/: error_handling.fwf  long_strings.fwf  nan_test.fwf  streaming_test.fwf  test_data.fwf  utf8_test.fwf
ffwf/: __init__.py  pandas.py  polars.py
polars_fwf/: __init__.py
src/: core.rs  lib.rs
tests/: test_aliases.py  test_arrow.py  test_nan.py  test_negative_zero.py  test_oom.py  test_pandas.py  test_plugin.py  test_python.py  test_streaming.py  test_validation.py  test_write.py
tests/benchmarks/: benchmark.py  generate_large_fwf.py  perf_write.py
