[package]
name = "fwf"
version = "0.1.0"
edition = "2024"

[lib]
name = "fwf"
crate-type = ["cdylib"]

[dependencies]
arrow-array = { version = "53", features = ["ffi"] }
arrow-buffer = "53"
arrow-schema = { version = "53", features = ["ffi"] }
arrow-data = "53"
lexical-core = { version = "1.0", default-features = false, features = ["parse-floats", "parse-integers"] }
memmap2 = "0.9"
rayon = "1.10"
pyo3 = { version = "0.28", features = ["extension-module", "abi3-py39"] }

[profile.release]
codegen-units = 1
strip = true
lto = "fat"
