[build-system]
requires = ["maturin>=1.5,<2.0"]
build-backend = "maturin"

[project]
name = "ffwf"
version = "0.1.0"
requires-python = ">=3.9"
dependencies = [
    "pyarrow>=13",
]

[project.optional-dependencies]
polars = ["polars>=1.34"]
pandas = ["pandas"]
all = ["polars>=1.34", "pandas"]
dev = [
    "pandas==2.2.3",
    "matplotlib",
    "pytest",
    "ffwf[all]",
]

[tool.maturin]
features = ["pyo3/extension-module"]
module-name = "ffwf._fwf"
